Emit metric for nodes failing system upgrade